Modificacion de archivo index con nueva opcion en la lista proyectos

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <section id="misProyectos">
             <h2>Mis Proyectos</h2>
             <ul>
-                <li><a href="#">Proyecto #1</a></li>
+                <li><a href="./views/ejemplo-css.html">Proyecto Practica de CSS</a></li>
                 <li><a href="#">Proyecto #3</a></li>
                 <li><a href="#">Poryecto #4</a></li>
                 <li><a href="#">Proyecto #2</a></li>
@@ -73,9 +73,9 @@
             <h2>Referencias personales</h2>
             <p>Estas son mis referencias personales, compañeros de trabajo que pueden dar testimonio de mis trabajo y mi trayectoria profesional.</p>
             <!-- Tabla de referencias personales -->
-            <table>
+            <table style="border: 2px solid black;">
                 <caption>Referencias de contacto</caption>
-                <thead>
+                <thead style="border: 2px solid black;">
                     <tr>
                         <th>Nombre</th>
                         <th>Correo</th>
