se añade nueva opcion en mis proyectos

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/index.css">
     <title>Pagina personal - German</title>
     <link rel="shortcut icon" href="./assets/images/codificacion.png" type="image/x-icon">
 </head>
@@ -37,9 +38,9 @@
             <h2>Mis Proyectos</h2>
             <ul>
                 <li><a href="./views/ejemplo-css.html">Proyecto Practica de CSS</a></li>
+                <li><a href="./views/layout-flexbox.html">Proyecto #2</a></li>
                 <li><a href="#">Proyecto #3</a></li>
                 <li><a href="#">Poryecto #4</a></li>
-                <li><a href="#">Proyecto #2</a></li>
                 <li><a href="#">Proyecto #5</a></li>
             </ul>
         </section>
