--- a/index.html
+++ b/index.html
@@ -3,54 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Iconos de Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- Pagina de estilos CSS -->     
     <link rel="stylesheet" href="./styles/index.css">
-    <title>Pagina personal - German</title>
+    <!-- Fuentes de Google -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders:opsz,wght@10..72,100..900&family=Caveat:wght@400..700&family=Kulim+Park:ital,wght@0,200;0,300;0,400;0,600;0,700;1,200;1,300;1,400;1,600;1,700&family=Outfit:wght@100..900&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <title>Website - German Bermudez</title>
     <link rel="shortcut icon" href="./assets/images/codificacion.png" type="image/x-icon">
 </head>
 <body>
     <!-- Encabezado -->
-    <header>
+    <header id="header">
+        <div class="contenedor-1">
+            <div class="sub-contenedor-1">
+                <img class="foto-perfil" src="./assets/images/perfil.jpg" alt="Foto de perfil personal German Bermudez">            
+                <h1 class="texto-blanco german-bermudez">Germán Bermúdez</h1>
+                <p class="texto-blanco desarrollador">Desarrollador de software & Web</p>
+                <div class="redes-sociales">
+                    <a href="https://www.linkedin.com/in/german-bermudez/" target="_blank" class="decoracion-icono"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.facebook.com/?locale=es_LA" target="_blank" class="decoracion-icono"><i class="bi bi-facebook"></i></a>
+                    <a href="https://web.whatsapp.com/" class="decoracion-icono"><i class="bi bi-whatsapp"></i></a>
+                    <a href="https://www.instagram.com/" class="decoracion-icono"><i class="bi bi-instagram"></i></a>
+                    <a href="https://github.com/Shermangnr" target="_blank" class="decoracion-icono"><i class="bi bi-github"></i></a>
+                </div>
+            </div>
+        </div>
         <!-- Menu de Navegación -->
-        <nav>
-            <div>
-                <a href="#acercaDeMi">Acerca de mi</a>
-                <a href="#misProyectos">Mis proyectos</a>
-                <a href="#imagenes">Imagenes</a>
-                <a href="#peliculaFavorita">Pelicula favorita</a>
-                <a href="#cancionFavorita">Cancion favorita</a>
-                <a href="./views/contacto.html">Contacto</a>                
+        <nav class="menu-navegacion">
+            <div class="contenedor-opciones">
+                <a href="#header" class="opciones texto-blanco">Inicio</a>
+                <a href="#acercaDeMi" class="opciones texto-blanco">Acerca de mi</a>
+                <a href="./views/proyectos.html" class="opciones texto-blanco">Mis proyectos</a>
+                <a href="#peliculaFavorita" class="opciones texto-blanco">Pelicula favorita</a>
+                <a href="#cancionFavorita" class="opciones texto-blanco">Cancion favorita</a>
+                <a href="#imagenes" class="opciones texto-blanco">Referencias</a>
+                <a href="./views/contacto.html" class="opciones texto-blanco">Contacto</a>                
             </div>
         </nav>
     </header>
 
     <!-- Contenido principal de la pagina -->
     <main>
-        <h1>Germán Bermúdez</h1>
         
         <!-- Sección acerca de mi -->
         <section id="acercaDeMi">
-            <h2>Acerca de mi</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint accusamus placeat temporibus nobis rem at quibusdam iure in error eaque! Labore repudiandae eaque optio facilis aut quaerat sequi molestiae. Quas quo eligendi saepe consequuntur eaque illum nemo, velit illo, facilis dolor quae voluptates enim cum non a quod, autem tempore distinctio numquam repellat nulla! Voluptas laborum modi et quasi maxime? Maiores, tenetur molestias. Corrupti, aspernatur? Numquam beatae sequi aspernatur illum qui exercitationem dicta odit ullam nam vel expedita, fuga quibusdam explicabo perspiciatis, nostrum maxime sit nihil itaque dolorem dolor sed dolorum voluptatibus possimus. Nihil reprehenderit ex velit sunt eligendi recusandae quisquam distinctio labore, quaerat nobis autem consequuntur modi! Vitae temporibus ut distinctio error facere exercitationem aspernatur modi, veniam suscipit sed fuga eos officiis ratione laboriosam consequuntur, consectetur, vero doloribus molestias quam ducimus culpa blanditiis explicabo incidunt harum? Aspernatur quisquam animi maiores ratione odio corrupti dolorem, officia quae iure amet explicabo labore, minus accusantium porro, temporibus ab necessitatibus magni? Nemo rem odio eos earum dolore tempora perspiciatis sequi fuga aut temporibus corporis iusto, voluptatem numquam quod, tenetur iure doloribus alias! Magni, quis in neque nostrum odit obcaecati nisi reiciendis mollitia aliquam eos id numquam nam velit eum dolor possimus fugit voluptatum?</p>
-        </section>
-
-        <!-- Sección Mis proyectos -->
-        <section id="misProyectos">
-            <h2>Mis Proyectos</h2>
-            <ul>
-                <li><a href="./views/ejemplo-css.html">Proyecto Practica de CSS</a></li>
-                <li><a href="./views/layout-flexbox.html">Proyecto #2</a></li>
-                <li><a href="#">Proyecto #3</a></li>
-                <li><a href="#">Poryecto #4</a></li>
-                <li><a href="#">Proyecto #5</a></li>
-            </ul>
-        </section>
-
-        <!-- Sección de imagenes -->
-        <section id="imagenes">
-            <h2>Imagenes</h2>
-            <img style="width: 200px;" src="https://images.pexels.com/photos/5483071/pexels-photo-5483071.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Manos en un computador codificando">
-            <img style="width: 200px;" src="https://images.pexels.com/photos/1181676/pexels-photo-1181676.jpeg" alt="Persona codificando en computador">
-            <img style="width: 200px;" src="https://images.pexels.com/photos/943096/pexels-photo-943096.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Computador con codigo en VsCode">
+            <div class="contenedor-info">
+                <img src="./assets/icons/informacion.png" class="icono-info" alt="Icono de información">
+            </div>
+            <div class="contenedor-info">
+                <h2 class="acerca-de-mi texto-blanco">Acerca de mi</h2>
+            </div>
+            <div class="contenedor-info">
+                <p class="descripcion-propia texto-blanco"><span style="color: #1FC1A2;">¡Hola Bienvenido a mi Website!</span> Soy Germán Bermúdez, un bogotano de 29 años con una pasión por el mundo digital. Como tecnólogo en Análisis y Desarrollo de Software, estoy en constante aprendizaje, actualmente inmerso en un bootcamp de desarrollo web fullstack. Mi objetivo profesional es convertirme en ingeniero de software, con especialización en gerencia de proyectos. Me considero una persona curiosa, detallista y fiel, cualidades que aplico tanto en mi vida profesional como personal. Fuera del mundo de la tecnología, me apasiona el deporte, especialmente el fútbol y el cheerleading, donde he tenido la oportunidad de participar en competencias a nivel nacional e internacional.</p>
+            </div>
         </section>
 
         <!-- Seccion Pelicula favorita -->
