Modificacion de archivo incluyendo inf basica y aspectos profesionales

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="sub-contenedor-1">
                 <img class="foto-perfil" src="./assets/images/perfil.jpg" alt="Foto de perfil personal German Bermudez">            
                 <h1 class="texto-blanco german-bermudez">Germán Bermúdez</h1>
-                <p class="texto-blanco desarrollador">Desarrollador de software & Web</p>
+                <p class="texto-blanco desarrollador tamano-texto">Desarrollador de software & Web</p>
                 <div class="redes-sociales">
                     <a href="https://www.linkedin.com/in/german-bermudez/" target="_blank" class="decoracion-icono"><i class="bi bi-linkedin"></i></a>
                     <a href="https://www.facebook.com/?locale=es_LA" target="_blank" class="decoracion-icono"><i class="bi bi-facebook"></i></a>
@@ -34,20 +34,20 @@
         <!-- Menu de Navegación -->
         <nav class="menu-navegacion">
             <div class="contenedor-opciones">
-                <a href="#header" class="opciones texto-blanco">Inicio</a>
-                <a href="#acercaDeMi" class="opciones texto-blanco">Acerca de mi</a>
-                <a href="./views/proyectos.html" class="opciones texto-blanco">Mis proyectos</a>
-                <a href="#peliculaFavorita" class="opciones texto-blanco">Pelicula favorita</a>
-                <a href="#cancionFavorita" class="opciones texto-blanco">Cancion favorita</a>
-                <a href="#imagenes" class="opciones texto-blanco">Referencias</a>
-                <a href="./views/contacto.html" class="opciones texto-blanco">Contacto</a>                
+                <a href="#header" class="opciones texto-blanco tamano-texto">Inicio</a>
+                <a href="#acercaDeMi" class="opciones texto-blanco tamano-texto">Acerca de mi</a>
+                <a href="./views/proyectos.html" class="opciones texto-blanco tamano-texto">Mis proyectos</a>
+                <a href="#peliculaFavorita" class="opciones texto-blanco tamano-texto">Pelicula favorita</a>
+                <a href="#cancionFavorita" class="opciones texto-blanco tamano-texto">Cancion favorita</a>
+                <a href="#imagenes" class="opciones texto-blanco tamano-texto">Referencias</a>
+                <a href="./views/contacto.html" class="opciones texto-blanco tamano-texto">Contacto</a>                
             </div>
         </nav>
     </header>
 
     <!-- Contenido principal de la pagina -->
     <main>
-        
+                
         <!-- Sección acerca de mi -->
         <section id="acercaDeMi">
             <div class="contenedor-info">
@@ -57,9 +57,78 @@
                 <h2 class="acerca-de-mi texto-blanco">Acerca de mi</h2>
             </div>
             <div class="contenedor-info">
-                <p class="descripcion-propia texto-blanco"><span style="color: #1FC1A2;">¡Hola Bienvenido a mi Website!</span> Soy Germán Bermúdez, un bogotano de 29 años con una pasión por el mundo digital. Como tecnólogo en Análisis y Desarrollo de Software, estoy en constante aprendizaje, actualmente inmerso en un bootcamp de desarrollo web fullstack. Mi objetivo profesional es convertirme en ingeniero de software, con especialización en gerencia de proyectos. Me considero una persona curiosa, detallista y fiel, cualidades que aplico tanto en mi vida profesional como personal. Fuera del mundo de la tecnología, me apasiona el deporte, especialmente el fútbol y el cheerleading, donde he tenido la oportunidad de participar en competencias a nivel nacional e internacional.</p>
+                <p class="descripcion-propia texto-blanco tamano-texto"><span style="color: #1FC1A2;">¡Hola Bienvenido a mi Website!</span> Soy Germán Bermúdez, aunque mis amigos y las personas más allegadas a mi me llaman <b>Sherman</b>, soy un Bogotano de 29 años con una pasión por el mundo digital. Como tecnólogo en Análisis y Desarrollo de Software, estoy en constante aprendizaje, actualmente inmerso en un bootcamp de desarrollo web fullstack. Mi objetivo profesional es convertirme en ingeniero de software, con especialización en gerencia de proyectos. Me considero una persona curiosa, detallista y fiel, cualidades que aplico tanto en mi vida profesional como personal. Fuera del mundo de la tecnología, me apasiona el deporte, especialmente el fútbol y el cheerleading, donde he tenido la oportunidad de participar en competencias a nivel nacional e internacional.</p>
             </div>
         </section>
+
+        <section class="encontrar">
+            <p class="texto-blanco tamano-texto">
+                En esta página podrás encontrar a detalle los siguientes aspectos personales:
+            </p>
+            <ul style="list-style-type: '✓  '; margin-top: 0; margin-bottom: 5px;" class="tamano-texto">
+                <li><a href="#informacionBasica" class="opciones texto-blanco tamano-texto">Información básica</a></li>
+                <li><a href="#aspectosProfesionales" class="opciones texto-blanco tamano-texto">Aspectos profesionales</a></li>
+                <li><a href="#" class="opciones texto-blanco tamano-texto">Rasgos de personalidad</a></li>
+                <li><a href="#" class="opciones texto-blanco tamano-texto">Información adicional</a></li>
+            </ul>
+        </section>
+        <br>
+        <hr>
+        <!-- Seccion de informacion basica -->
+        <section id="informacionBasica" class="informacion-basica">
+            <div class="cont1-informacion-basica">
+                <img src="./assets/icons/info-personal.png" style="width: 25px; height: 25px;" alt="Icono de informacion personal">
+                <h3 class="texto-blanco">Información básica</h3>
+            </div>            
+            <p class="margen-inf-b texto-blanco tamano-texto"><b>Nombre:</b> German Alirio Bermudez Buitrago</p>
+            <p class="margen-inf-b texto-blanco tamano-texto"><b>Edad:</b> 29 Años</p>
+            <p class="margen-inf-b texto-blanco tamano-texto"><b>Lugar de residencia:</b>Bogotá - Colombia</p>
+        </section>
+        <br>
+        <hr>        
+        <section id="aspectosProfesionales" class="aspectos-profesionales">
+            <div class="cont2-aspectos-profesionales">
+                <img src="./assets/icons/aspectos.png" style="width: 25px; height: 25px;" alt="Icono con CV">
+                <h3 class="texto-blanco">Aspectos profesionales</h3>
+            </div>
+            <p class="margen-inf-b texto-blanco tamano-texto"><b>Profesión:</b> Tecnólogo en Analisis y Desarrollo de Software</p>
+            <p class="margen-inf-b texto-blanco tamano-texto"><b>Experiencia Profesional:</b></p>
+            <div style="display: flex; flex-direction: row;">
+                <ul style="list-style-type: '★ '; width: 50%;">
+                    <li class="texto-blanco tamano-texto"><b>Consejo Colombiano de Seguridad -</b> Desarrollador de Software JR</li>
+                    <li style="list-style: none;" class="texto-blanco">Junio 2024 - Diciembre 2024</li>
+                    <li style="list-style: none;" class="texto-blanco"><b>Funciones</b></li>
+                    <li style="list-style: none;" class="texto-blanco"><b>-</b> Desarrollo de aplicaciones web para uso interno y externo a partir de la recopilación de requerimientos de las areas de la empresa.</li>
+                    <li style="list-style: none;" class="texto-blanco"><b>-</b> Testeo y validación de aplicaciones siguiendo el flujo natural, para garantizar su funcionalidad, calidad y que se cumpla con los requerimientos funcionales solicitados por los usuarios.</li>
+                    <li style="list-style: none;" class="texto-blanco"><b>-</b> Manejo de herramientas de versionamiento aplicando buenas praticas de desarrollo</li>
+                </ul>
+                <ul style="list-style-type: '★ '; width: 50%;">
+                    <li class="texto-blanco tamano-texto"><b>Kantar Ibope Media -</b> Colector de Medios Publicitarios</li>
+                    <li style="list-style: none;" class="texto-blanco">Enero 2017 - Abril 2024</li>
+                    <li style="list-style: none;" class="texto-blanco"><b>Funciones</b></li>
+                    <li style="list-style: none;" class="texto-blanco"><b>-</b> Recopilación de datos publicitarios de radio, prensa y revistas.</li>
+                    <li style="list-style: none;" class="texto-blanco"><b>-</b> Manejo de herramientas específicas como AG y SP Infoanálisis</li>
+                    <li style="list-style: none;" class="texto-blanco"><b>-</b> Colaboración en tareas de calidad y programación bajo la supervisiónde los coordinadores.</li>
+                    <li style="list-style: none;" class="texto-blanco"><b>-</b> Manejo de herramientas ofimáticas como Microsoft Excel y Word.</li>
+                </ul>
+            </div>
+
+        </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
         <!-- Seccion Pelicula favorita -->
         <section id="peliculaFavorita">
